# g4f-api

./: Dockerfile  README.md  main.py  pyproject.toml  setup.cfg
g4f_api/: app.py
